src/sap.m/src/sap/m/themes/base/ListItemBase.less
/* ============================================= */
/* CSS for control sap.m/ListItemBase.control    */
/* ============================================= */

.sapMLIB,
.sapMLIBImgNav,
.sapMLIBIconDet,
.sapMLIBIconDel {
	box-sizing: border-box;
}

.sapMLIB {
	display: -webkit-box;
	display: -moz-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-moz-box-align: center;
	-ms-flex-align: center;
	align-items: center;
}

.sapMLIBContent{
	-webkit-box-flex: 1;
	-moz-box-flex: 1;
	-ms-flex: auto;
	flex: 1;
	-ms-flex-negative: 1; /* IE10 does not shrink by auto */
	max-width: 100%;
}

.sapMLIBTypeNavigation{
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.sapMLIB:focus,
.sapMListTblSubRow:focus {
	outline: none;
}

/* IE ignores outline-offset. Use an overlay: */
.sapMLIBLegacyOutline:focus {
  outline: none;
  position: relative;
}

.sapMLIBLegacyOutline:focus::before {
  content: "";
  border: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  pointer-events: none;
}

.sapMLIBSelectS,
.sapMLIBSelectSL,
.sapMLIBSelectM,
.sapMLIBSelectD {
	width:2.75em;
}

.sapMLIBActionable {
	cursor: pointer;
}

.sapMLIBImgNav,
.sapMLIBImgDet,
.sapMLIBImgDel,
.sapMLIBIconDet,
.sapMLIBSelectS,
.sapMLIBSelectSL,
.sapMLIBSelectM,
.sapMLIBSelectD,
.sapMLIBCounter {
	-webkit-box-flex: 0;
	-moz-box-flex: 0;
	-ms-flex: none;
	flex: none;
}

